Change ArticleList activity to fragment

--- a/android/app/src/main/res/layout/fragment_item_list.xml
+++ b/android/app/src/main/res/layout/fragment_item_list.xml
@@ -5,8 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".activity.ArticleListActivity">
+    android:orientation="vertical">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
@@ -15,6 +14,6 @@
         android:clipToPadding="false"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         android:orientation="vertical"
-        tools:listitem="@layout/activity_article_list_item"/>
+        tools:listitem="@layout/fragment_item_list"/>
 
 </LinearLayout>
