--- a/android/app/src/main/res/layout/activity_article.xml
+++ b/android/app/src/main/res/layout/activity_article.xml
@@ -4,9 +4,54 @@
     android:layout_height="match_parent"
     android:padding="10dp">
 
-    <FrameLayout
-        android:id="@+id/articleListContainer"
+    <TextView
+        android:id="@+id/article_source"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="15sp"
+        android:gravity="center_vertical"
+        android:text="연합뉴스"
+        android:textSize="15sp" />
+
+    <TextView
+        android:id="@+id/article_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/article_source"
+        android:layout_marginLeft="10sp"
+        android:layout_marginTop="1sp"
+        android:layout_marginRight="10sp"
+        android:layout_marginBottom="10sp"
+        android:gravity="center_vertical"
+        android:text="코로나 주춤 중국·유럽 잇단 개학…한국 5월 단계적 등교 유력"
+        android:textSize="25sp"
+        android:textStyle="bold|italic" />
+    <TextView
+        android:id="@+id/article_pubDate"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="15sp"
+        android:layout_marginLeft="15sp"
+        android:text="2019-05-24 10:23"
+        android:textSize="15sp"
+        android:layout_below="@+id/article_title"
+        android:gravity="center_vertical"
+        android:layout_marginStart="15sp" />
+
+    <WebView
+        android:id="@+id/article_article_body"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="22dp" />
+        android:layout_below="@+id/article_pubDate"/>
+
+    <TextView
+        android:id="@+id/article_originallink"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="15sp"
+        android:gravity="center_vertical"
+        android:layout_below="@+id/article_article_body"
+        android:text="www.naver.com"
+        android:textSize="15sp" />
+
 </RelativeLayout>
