--- a/android/app/src/main/res/layout/fragment_item.xml
+++ b/android/app/src/main/res/layout/fragment_item.xml
@@ -33,14 +33,14 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="New Text"
-                        android:id="@+id/article_title" />
+                        android:id="@+id/article_list_title" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="New Text"
-                        android:id="@+id/article_pubDate"
-                        android:layout_below="@+id/article_title"
+                        android:id="@+id/article_list_pubDate"
+                        android:layout_below="@+id/article_list_title"
                         />
 
                 </RelativeLayout>
