--- a/android/app/src/main/res/layout/fragment_item_list.xml
+++ b/android/app/src/main/res/layout/fragment_item_list.xml
@@ -1,16 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:id="@+id/bottom_sheet"
+    android:orientation="vertical"
+    style="@style/AppBottomSheetTheme"
+    app:layout_behavior="com.example.android.interfaces.LockBottomSheetBehavior"
+    app:behavior_hideable="true"
+    app:behavior_peekHeight="300dp">
+    <ImageButton
+        android:id="@+id/button_expand"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        style="@style/AppBottomSheetTheme"
+        android:src="@drawable/ic_expand_less_24px"
+        android:contentDescription="Expand" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:clipToPadding="false"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         android:orientation="vertical"
