rename layout files

--- a/android/app/src/main/res/layout/fragment_news.xml
+++ b/android/app/src/main/res/layout/fragment_news.xml
@@ -49,7 +49,7 @@
     </LinearLayout>
 
 
-    <include layout="@layout/fragment_item_list" />
+    <include layout="@layout/news_item_list" />
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
