--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -4,5 +4,6 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="listWhite">#cccccc</color>
+    <color name="transNavy">#99000C2B</color>
     <color name="demo_dark_transparent">#12000000</color>
 </resources>
