--- a/android/app/src/main/res/layout/history_item.xml
+++ b/android/app/src/main/res/layout/history_item.xml
@@ -2,14 +2,14 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
 
-    android:id="@+id/cv"
+    android:id="@+id/history_card_view"
     android:layout_margin="0.5dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
 
     <RelativeLayout
-        android:id="@+id/rl_title"
+        android:id="@+id/history_article_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="1dp"
@@ -26,7 +26,7 @@
             tools:text="dfsdfsdfsdf" />
 
         <TextView
-            android:id="@+id/article_pubDate"
+            android:id="@+id/article_year"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/article_title"
@@ -36,4 +36,3 @@
     </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
-
