--- a/android/app/src/main/res/layout/news_item.xml
+++ b/android/app/src/main/res/layout/news_item.xml
@@ -26,7 +26,7 @@
             tools:text="dfsdfsdfsdf" />
 
         <TextView
-            android:id="@+id/article_pubDate"
+            android:id="@+id/article_year"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/article_title"
