--- a/android/app/src/main/res/menu/article_menu.xml
+++ b/android/app/src/main/res/menu/article_menu.xml
@@ -3,10 +3,16 @@
 
     <item
         android:id="@+id/article_action_bookmark"
+        android:checkable="true"
         android:icon="@drawable/ic_bookmark_black_24dp"
         android:orderInCategory="10"
         android:title="@string/bookmark"
-        android:checkable="true"
         app:showAsAction="ifRoom" />
 
+    <item
+        android:id="@+id/article_action_share"
+        android:icon="@drawable/ic_baseline_share_24"
+        android:orderInCategory="15"
+        android:title="@string/share"
+        app:showAsAction="ifRoom" />
 </menu>
