--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -16,4 +16,7 @@
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.ActionBar" />
 
+    <style name="WhiteRec">
+        <item name="android:background">@drawable/rectangle_sheet</item>
+    </style>
 </resources>
