--- a/android/app/src/main/res/layout/bookmark_item_list.xml
+++ b/android/app/src/main/res/layout/bookmark_item_list.xml
@@ -9,6 +9,23 @@
     android:id="@+id/history_layout"
     android:orientation="vertical">
 
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/app_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:paddingRight="5dp"
+            android:background="@android:color/white"
+            android:paddingEnd="5dp"
+            tools:ignore="RtlSymmetry" />
+
+    </com.google.android.material.appbar.AppBarLayout>
+
     <com.cooltechworks.views.shimmer.ShimmerRecyclerView
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
