--- a/android/app/src/main/res/layout/news_item_list.xml
+++ b/android/app/src/main/res/layout/news_item_list.xml
@@ -11,12 +11,15 @@
     style="@style/AppBottomSheetTheme"
     app:layout_behavior="@string/bottom_sheet_behavior"
     app:behavior_hideable="true"
+    android:layout_margin="3dp"
     app:behavior_peekHeight="300dp">
     <ImageButton
         android:id="@+id/button_expand"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_gravity="center"
         android:layout_height="wrap_content"
-        style="@style/AppBottomSheetTheme"
+        android:layout_margin="1dp"
+        android:background="@android:color/white"
         android:src="@drawable/ic_expand_less_24px"
         android:contentDescription="Expand" />
 
