--- a/android/app/src/main/res/layout/history_item_list.xml
+++ b/android/app/src/main/res/layout/history_item_list.xml
@@ -6,6 +6,8 @@
     android:id="@+id/history_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:animationCache="true"
+    android:background="@color/background_white"
     android:orientation="vertical">
 
     <com.google.android.material.appbar.AppBarLayout
