--- a/android/app/src/main/res/layout/bookmark_item_list.xml
+++ b/android/app/src/main/res/layout/bookmark_item_list.xml
@@ -6,6 +6,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:animationCache="true"
+    android:background="@color/background_white"
     android:id="@+id/history_layout"
     android:orientation="vertical">
 
