--- a/android/app/src/main/res/layout/fragment_news.xml
+++ b/android/app/src/main/res/layout/fragment_news.xml
@@ -1,9 +1,9 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_frame"
-    android:background="#f4f4f4"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/background_white">
 
     <LinearLayout
         android:id="@+id/graph_layout"
@@ -12,40 +12,11 @@
         android:orientation="vertical"
         tools:context=".MainActivity">
 
-        <Button
-            android:id="@+id/main_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="button" />
-
         <com.example.android.GraphView
             android:id="@+id/graph_view"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/add_button"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="+"
-                tools:ignore="ButtonStyle" />
-
-            <Button
-                android:id="@+id/subtract_button"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="-"
-                tools:ignore="ButtonStyle" />
-
-        </LinearLayout>
 
     </LinearLayout>
 
