--- a/android/app/src/main/res/layout/activity_article.xml
+++ b/android/app/src/main/res/layout/activity_article.xml
@@ -20,10 +20,21 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/app_bar"
+        android:max="100"
+        android:progress="50"
+        android:visibility="gone" />
+
     <WebView
         android:id="@+id/article_webview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/app_bar" />
+        android:layout_below="@+id/progress_bar" />
+
 
 </RelativeLayout>
