--- a/android/app/src/main/res/layout/fragment_news.xml
+++ b/android/app/src/main/res/layout/fragment_news.xml
@@ -12,11 +12,20 @@
         android:orientation="vertical"
         tools:context=".MainActivity">
 
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            style="@style/Widget.AppCompat.ProgressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:visibility="gone" />
+
         <com.example.android.GraphView
             android:id="@+id/graph_view"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1" />
+
 
     </LinearLayout>
 
