--- a/android/app/src/main/res/layout/news_item.xml
+++ b/android/app/src/main/res/layout/news_item.xml
@@ -29,14 +29,13 @@
             android:layout_marginBottom="5dp"
 
             android:ellipsize="end"
-            android:fontFamily="@font/nanumr"
+            android:fontFamily="@font/nanumsquareroundb"
             android:gravity="center_vertical"
             android:lineSpacingExtra="3dp"
             android:lines="2"
             android:maxLines="2"
             android:text=""
             android:textAllCaps="false"
-            android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textColor="#000000"
             android:textSize="14sp"
             tools:text="대한민국 대한민국 대한민국 대한민국 대한민국 대대한민국 대한민국 대한민국 대한민국 대한민국 대한 대한민국 한 대한민국 대한민국 대한민국 대한민국 대한민국 대한민국 대대한민국 대한민국 대한민국 대한민국 대한민국 대한 대한민국 한 대한민국 " />
